feat: add buttons styling on the home page

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@
 :root {
     //Colors
     --color-primary: hsl(181, 73%, 60%);
+    --color-primary-alpha: hsl(181, 73%, 60%, 0.7);
     --color-secondary: hsl(252, 12%, 40%);
     --color-white: hsl(0, 0%, 100%);
     --color-black: hsl(0, 0%, 0%);
