--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -1,7 +1,84 @@
+@use '../abstracts/mixins';
+
 .btn {
     &,
     &:visited,
     &:link {
+        position: relative;
+
+        width: max-content;
+
+        padding: 0.5em;
+
         color: var(--color-white);
+
+        transition: box-shadow 0.3s ease;
+
+        &:hover {
+            box-shadow: 0 0 0.6rem 0.2rem var(--color-primary-alpha);
+
+            &::before {
+                top: 0;
+                left: 0;
+
+                opacity: 1;
+
+                transition:
+                    opacity 0.2s ease-in-out,
+                    inset 0.2s ease-in-out;
+            }
+
+            &:after {
+                bottom: 0;
+                right: 0;
+
+                opacity: 1;
+            }
+        }
+
+        &::before,
+        &::after {
+            position: absolute;
+            content: '';
+
+            width: 1rem;
+            height: 1rem;
+
+            border: 2px solid var(--color-primary);
+
+            background-color: transparent;
+
+            opacity: 0;
+
+            transition:
+                opacity 0.2s ease-in-out,
+                inset 0.2s ease-in-out;
+            @include mixins.respond-to('tablet') {
+                width: 1.5rem;
+                height: 1.5rem;
+            }
+        }
+
+        &::before {
+            top: -10%;
+            left: -10%;
+
+            border-right: 0;
+            border-bottom: 0;
+        }
+
+        &::after {
+            bottom: -10%;
+            right: -10%;
+
+            border-left: 0;
+            border-top: 0;
+        }
     }
+}
+
+.arrow {
+    margin-top: auto;
+    padding: 0.8em 1em;
+    border: 0.1rem solid var(--color-primary);
 }
