--- a/eCommerce-Application/src/styles/layout/_home.scss
+++ b/eCommerce-Application/src/styles/layout/_home.scss
@@ -1,6 +1,10 @@
 @use '../abstracts/mixins';
 
 .home {
+    @include mixins.respond-to('desktop') {
+        padding-bottom: 8rem;
+    }
+
     & > * {
         max-width: 96rem;
         margin: auto;
