feat: add 404 page

--- a/eCommerce-Application/src/styles/base/_base.scss
+++ b/eCommerce-Application/src/styles/base/_base.scss
@@ -14,3 +14,21 @@ body {
     background-size: cover;
     background-position: top;
 }
+
+.sr-only {
+    position: absolute;
+
+    width: 1px;
+    height: 1px;
+
+    margin: -1px;
+    padding: 0;
+
+    clip: rect(0, 0, 0, 0);
+
+    border: none;
+
+    white-space: nowrap;
+
+    overflow: hidden;
+}
