--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -14,12 +14,12 @@
 
     //Fonts
     --ff-title: 'Project Space', sans-serif;
-    --ff-primary: 'neuropol', sans-serif;
+    --ff-primary: 'Neuropol', sans-serif;
     --ff-secondary: 'Bowler', sans-serif;
 
     --fs-title: clamp(1.4rem, 4vw, 10rem);
     --fs-logo: clamp(4rem, 5vw, 9rem);
-    --fs-paragraph: clamp(1.2rem, 3vw, 2.2rem);
+    --fs-paragraph: clamp(1.2rem, 2vw, 2.2rem);
     --fs-big: clamp(2rem, 3vw, 5rem);
     --fs-medium: clamp(1.2rem, 1vw, 3rem);
     --fs-small: clamp(1rem, 2vw, 1.6rem);
