--- a/eCommerce-Application/src/styles/index.scss
+++ b/eCommerce-Application/src/styles/index.scss
@@ -8,5 +8,6 @@
 @use './layout/header';
 @use './layout/home';
 @use './layout/attainments';
+@use './layout/catalog';
 @use './layout/error-page';
 @use './pages/main';
