feat: add registration form layout, add validation error messages

--- a/eCommerce-Application/src/styles/base/_reset.scss
+++ b/eCommerce-Application/src/styles/base/_reset.scss
@@ -107,3 +107,12 @@ meter {
 :where(dialog:modal) {
     all: revert;
 }
+
+/*Custom rules for checkbox */
+input[type='checkbox'] {
+    -webkit-appearance: checkbox;
+    -moz-appearance: checkbox;
+    -ms-appearance: checkbox;
+    -o-appearance: checkbox;
+    appearance: checkbox;
+}
