--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -5,6 +5,8 @@
     --color-primary: hsl(181, 73%, 60%);
     --color-secondary: hsl(252, 12%, 40%);
     --color-white: hsl(0, 0%, 100%);
+    --color-white-alpha: hsla(0, 0%, 100%, 80%);
+    --color-danger: hsl(0, 81%, 44%);
     --color-black: hsl(0, 0%, 0%);
     --drop-shadow-white: 0 0 2rem var(--color-white),
         0 0 0.2rem var(--color-white);
