feat: add registration form layout, add validation error messages
fix: resolve conflicts part1

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -9,6 +9,8 @@
     --color-error: hsl(0, 100%, 61%);
     --color-white: hsl(0, 0%, 100%);
     --color-white-opacity: hsla(0, 0%, 96%, 0.8);
+    --color-white-alpha: hsla(0, 0%, 100%, 80%);
+    --color-danger: hsl(0, 81%, 44%);
     --color-black: hsl(0, 0%, 0%);
     --drop-shadow-white: 0 0 2rem var(--color-white),
         0 0 0.2rem var(--color-white);
