--- a/eCommerce-Application/src/styles/base/_base.scss
+++ b/eCommerce-Application/src/styles/base/_base.scss
@@ -1,3 +1,5 @@
+@use '../abstracts/mixins';
+
 html {
     font-size: 62.5%;
     scroll-behavior: smooth;
@@ -11,8 +13,9 @@ body {
     background-image: url('../assets/images/backround2.png'),
         url('../assets/images/background.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: top;
+    background-attachment: fixed;
+    background-size: calc(max(100%, 100rem)), cover;
 }
 
 .sr-only {
