--- a/eCommerce-Application/src/styles/index.scss
+++ b/eCommerce-Application/src/styles/index.scss
@@ -1,5 +1,6 @@
 @use './abstracts/mixins';
 @use './abstracts/variables';
+@use './abstracts/animations';
 @use './base/base';
 @use './base/reset';
 @use './base/typography';
@@ -10,4 +11,5 @@
 @use './layout/attainments';
 @use './layout/catalog';
 @use './layout/error-page';
+@use './layout/footer';
 @use './pages/main';
