--- a/eCommerce-Application/src/styles/layout/_catalog.scss
+++ b/eCommerce-Application/src/styles/layout/_catalog.scss
@@ -5,12 +5,14 @@
 
     &__container {
         display: grid;
-        margin: auto;
-        width: 95%;
         gap: 3rem;
 
+        width: 95%;
+
+        margin: auto;
+
         @include mixins.respond-to('desktop') {
-            width: 80%;
+            width: 90%;
         }
     }
 
@@ -23,7 +25,7 @@
 
     &__items {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
         gap: 3rem;
 
         @include mixins.respond-to('desktop') {
@@ -40,15 +42,15 @@
 
         color: var(--color-white);
 
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: center;
-
-        filter: grayscale(1);
-
         transition:
             translate 0.4s ease-out,
             filter 0.4s ease-out;
+
+        @include mixins.respond-to('desktop') {
+            min-height: 70vh;
+
+            filter: grayscale(1);
+        }
 
         & > a {
             position: absolute;
@@ -59,14 +61,14 @@
 
             width: 100%;
             height: 100%;
-        }
 
-        @include mixins.respond-to('desktop') {
-            min-height: 70vh;
+            z-index: 1;
         }
 
         &--1 {
-            background-image: url('../assets/images/souvenirs.jpg');
+            &::after {
+                background-image: url('../assets/images/souvenirs.jpg');
+            }
 
             @include mixins.respond-to('desktop') {
                 grid-row: 2 / span 2;
@@ -75,7 +77,9 @@
         }
 
         &--2 {
-            background-image: url('../assets/images/tours.jpg');
+            &::after {
+                background-image: url('../assets/images/tours.jpg');
+            }
 
             @include mixins.respond-to('desktop') {
                 grid-row: 2 / span 2;
@@ -84,7 +88,9 @@
         }
 
         &--3 {
-            background-image: url('../assets/images/hotels.png');
+            &::after {
+                background-image: url('../assets/images/hotels.png');
+            }
 
             @include mixins.respond-to('desktop') {
                 grid-row: 2 / span 2;
@@ -144,9 +150,31 @@
             }
         }
 
+        &::before,
+        &:after {
+            content: '';
+            position: absolute;
+            inset: 0;
+
+            height: 100%;
+
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+
+            transition: filter 0.4s ease;
+
+            z-index: -2;
+
+            @include mixins.respond-to('desktop') {
+                filter: blur(2px);
+            }
+        }
+
         @media (hover: hover) {
             &:hover {
                 translate: 0 -2rem;
+
                 filter: grayscale(0);
 
                 @include mixins.respond-to('tablet') {
@@ -177,14 +205,24 @@
                     }
                 }
             }
+
+            &:hover::before {
+                translate: 0 8rem;
+            }
+
+            &:hover::after {
+                filter: blur(0);
+            }
         }
     }
 
     &__decoration {
         @include mixins.respond-to('tablet') {
             position: relative;
+
             width: 100%;
             height: 0.1rem;
+
             background-color: var(--color-primary);
         }
     }
@@ -196,9 +234,12 @@
             position: absolute;
             top: calc(var(--width) / 2 * -1);
             left: calc(100% / 6 - calc(var(--width) / 2));
+
             width: var(--width);
             height: var(--width);
+
             border-radius: 50%;
+
             background-color: var(--color-primary);
 
             transition: scale 0.3s;
