feat: add a modal window on 404 page

--- a/eCommerce-Application/src/styles/base/_typography.scss
+++ b/eCommerce-Application/src/styles/base/_typography.scss
@@ -134,3 +134,10 @@
         text-align: right;
     }
 }
+
+.modal {
+    &__content {
+        width: min(100%, 15ch);
+        font-size: var(--fs-big);
+    }
+}
