--- a/eCommerce-Application/src/styles/index.scss
+++ b/eCommerce-Application/src/styles/index.scss
@@ -6,6 +6,7 @@
 @use './base/typography';
 @use './components/logo';
 @use './components/buttons';
+@use './components/modal';
 @use './layout/header';
 @use './layout/home';
 @use './layout/attainments';
