--- a/eCommerce-Application/src/styles/pages/_login.scss
+++ b/eCommerce-Application/src/styles/pages/_login.scss
@@ -1,11 +1,3 @@
-@font-face {
-    font-family: 'Neuropol';
-    src: url(../../assets/fonts/neuropol/neuropol.otf);
-}
-@font-face {
-    font-family: 'Bowler';
-    src: url(../../assets/fonts/bowler/BOWLER.otf);
-}
 body,
 section,
 div,
@@ -30,17 +22,18 @@ button {
 html {
     font-size: 10px;
 }
-body {
+
+main {
+    width: 100%;
+    height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
 
-    background-image: url('../../assets/images/backround-login.png');
+    background-image: url('../assets/images/backround-login.png');
     background-size: cover;
 
     font-family: 'Neuropol', sans-serif;
-}
-#root {
-    width: 100%;
 }
 .login {
     width: 47.4%;
@@ -53,9 +46,7 @@ body {
     width: 26%;
     margin: 0 auto;
 }
-.form {
-    border-radius: 2px;
-}
+
 .form__content {
     background-color: var(--color-primary-opacity);
 }
@@ -78,7 +69,7 @@ body {
 
     color: var(--color-dark-l);
 
-    font-size: clamp(1rem, 1.04vw, 2rem);
+    font-size: clamp(1rem, 0.95vw, 2rem);
     line-height: 92%;
     a {
         color: var(--color-dark-l);
@@ -113,7 +104,7 @@ body {
         outline: none;
 
         font-size: clamp(1rem, 1.04vw, 2rem);
-        font-family: 'Bowler', sans-serif;
+        font-family: 'Neuropol', sans-serif;
         &:focus {
             background-color: var(--color-primary);
             color: #000;
@@ -153,6 +144,8 @@ body {
 
     font-size: clamp(1rem, 1.04vw, 2rem);
     font-family: 'Bowler', sans-serif;
+
+    cursor: pointer;
     &:focus {
         outline: none;
         border: 2px solid var(--color-button);
@@ -180,13 +173,17 @@ body {
     width: 4.1rem;
     top: 0.7rem;
 
-    background-image: url('../../assets/images/eye-closed.png');
+    background-image: url('../assets/images/eye-closed.png');
+
+    cursor: pointer;
 }
 .password-view_password {
     width: 3.9rem;
     top: 1.02rem;
 
-    background-image: url('../../assets/imgages/eyes-open.png');
+    background-image: url('../assets/images/eye-open.png');
+
+    cursor: pointer;
 }
 
 .error-message {
@@ -194,5 +191,5 @@ body {
     height: 1rem;
 
     color: rgb(255, 54, 54);
-    font-size: 1.3rem;
+    font-size: 1.2rem;
 }
