--- a/eCommerce-Application/src/styles/pages/_registration.scss
+++ b/eCommerce-Application/src/styles/pages/_registration.scss
@@ -1,9 +1,10 @@
 body {
-    background-image: url('../assets/images/DreamShaper_v7_A_comet_flying_in_outer_space_0\ 7.png');
+    background-image: url('../assets/images/DreamShaper.png');
 }
 
 .registration {
     width: 85rem;
+
     &__button {
         margin-top: 5rem;
     }
