--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -7,12 +7,16 @@
 
     &_action {
         display: block;
+
+        position: relative;
+
+        width: min(100%, 23rem);
+
         margin: 0 auto;
-        padding: 2rem 0;
+        padding: 1em 0.5em;
 
         font-family: var(--ff-secondary);
 
-        width: 230px;
         text-align: center;
         background-color: var(--color-primary);
         cursor: pointer;
