--- a/eCommerce-Application/src/styles/components/_form.scss
+++ b/eCommerce-Application/src/styles/components/_form.scss
@@ -1,83 +1,137 @@
 @use '../abstracts/mixins';
+
 .form {
     margin: 0 auto;
     text-transform: capitalize;
 
     &__title {
-        padding: 2.5rem 10rem;
+        padding: 2vw;
         text-align: center;
 
-        font-size: 2.8rem;
         font-family: var(--ff-primary);
+        font-size: clamp(1.3rem, 4vw, 2.3rem);
 
         color: var(--color-white);
         background-color: var(--color-secondary);
     }
 
     &__content {
-        padding: 5.3rem 10rem 6.3rem 10rem;
+        padding: 1rem;
 
-        font-size: 2rem;
+        font-size: var(--fs-form);
         font-family: var(--ff-primary);
 
         color: var(--color-secondary);
         background-color: var(--color-white-alpha);
         text-align: start;
+
+        @include mixins.respond-to('tablet') {
+            padding: 4rem 8rem 0 8rem;
+        }
     }
 
     &__question {
+        text-align: center;
+
         a {
             border-bottom: 1px dashed var(--color-secondary);
+        }
+
+        @include mixins.respond-to('tablet') {
+            text-align: left;
         }
     }
 
     &__inputs {
-        margin-top: 5rem;
-        > * + * {
+        padding-block: 2rem;
+
+        & > * + * {
             margin-top: 3.5rem;
+        }
+
+        @include mixins.respond-to('tablet') {
+            padding-top: 3rem;
+            padding-bottom: 5rem;
+
+            &-wrapper {
+                &--offset {
+                    margin-top: 5.5rem;
+                }
+            }
         }
     }
 
     &__input {
         position: relative;
-        padding: 1.2rem 0 1.2rem 2.5rem;
+
         width: 100%;
+
+        padding: 1.2rem;
+
+        text-align: center;
+
         outline: 1px solid var(--color-secondary);
 
         &::placeholder {
             opacity: 0.5;
         }
+
         &:focus {
             outline: none;
             background-color: var(--color-white);
+
             + .placeholder__input {
                 opacity: 1;
             }
         }
 
         &-group {
-            padding: 20px;
-            border: 1px solid black;
-            margin-top: 5rem;
-            > * + * {
-                margin-top: 3.5rem;
+            margin-top: 3rem;
+            padding: 0 1.5rem 1rem 1.5rem;
+
+            border: 1px solid var(--color-black);
+
+            & > * + * {
+                margin-top: 3rem;
+            }
+
+            @include mixins.respond-to('tablet') {
+                margin-top: 5rem;
+                padding: 2rem;
+
+                border: 1px solid var(--color-black);
+
+                & > * + * {
+                    margin-top: 3.5rem;
+                }
             }
         }
 
         &-pair {
             display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 2rem;
+            grid-template-columns: 1fr;
+            gap: 3.5rem;
+
+            @include mixins.respond-to('tablet') {
+                grid-template-columns: 1fr 1fr;
+                gap: 3rem;
+            }
         }
 
         &-trio {
             display: grid;
-            grid-template-columns: 1fr 2fr 1fr;
-            gap: 4rem;
+            grid-template-columns: 1fr;
+            gap: 3rem;
+
+            @include mixins.respond-to('tablet') {
+                grid-template-columns: 1fr 2fr 1fr;
+                gap: 3rem;
+            }
         }
 
         &_checkbox {
-            @include mixins.flex(null, null, end);
+            @include mixins.flex(null, null, center);
+
             input {
                 width: 2.5rem;
                 height: 2.5rem;
@@ -85,7 +139,13 @@
         }
 
         &_invalid {
-            border: 1px solid rgb(255, 54, 54);
+            border: 1px solid var(--color-danger);
+        }
+
+        @include mixins.respond-to('tablet') {
+            padding: 1rem;
+
+            text-align: left;
         }
     }
 
@@ -96,7 +156,7 @@
     &__select {
         width: 100%;
         height: 100%;
-        padding: 1.2rem 0 1.2rem 2.5rem;
+
         outline: 1px solid var(--color-secondary);
     }
 }
