--- a/eCommerce-Application/src/styles/components/_placeholder.scss
+++ b/eCommerce-Application/src/styles/components/_placeholder.scss
@@ -1,23 +1,44 @@
+@use '../abstracts/mixins';
+
 .placeholder {
     position: relative;
+
     overflow: hidden;
 
     &__input {
-        z-index: 1;
-        cursor: text;
-        position: absolute;
-        top: 1px;
-        left: 25px;
-        width: 100%;
         display: none;
+
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        width: 100%;
+        height: 100%;
+
+        text-align: center;
+
         color: var(--color-secondary);
         opacity: 0.5;
+
+        z-index: 1;
+        cursor: text;
+
         span {
             color: var(--color-primary);
         }
+
+        @include mixins.respond-to('tablet') {
+            left: 2.5rem;
+        }
     }
+
     input:invalid + .placeholder__input {
-        display: inline;
+        // display: inline;
+        @include mixins.flex(null, center, center);
+
+        @include mixins.respond-to('tablet') {
+            @include mixins.flex(null, flex-start, center);
+        }
     }
 }
 
