feat: add responsive designe for registration page

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -29,6 +29,7 @@
     --ff-title: 'Project Space', sans-serif;
     --ff-primary: 'Neuropol', sans-serif;
     --ff-secondary: 'Bowler', sans-serif;
+    --ff-errors: Arial, Helvetica, sans-serif;
 
     --fs-title: clamp(1.4rem, 4vw, 10rem);
     --fs-logo: clamp(4rem, 5vw, 9rem);
