--- a/eCommerce-Application/src/styles/components/_form.scss
+++ b/eCommerce-Application/src/styles/components/_form.scss
@@ -2,7 +2,6 @@
 
 .form {
     margin: 0 auto;
-    text-transform: capitalize;
 
     &__title {
         padding: 2vw;
@@ -119,6 +118,7 @@
         }
 
         &-trio {
+            position: relative;
             display: grid;
             grid-template-columns: 1fr;
             gap: 3rem;
@@ -158,5 +158,9 @@
         height: 100%;
 
         outline: 1px solid var(--color-secondary);
+    }
+
+    &_big-first-letter {
+        text-transform: capitalize;
     }
 }
