refactor: update logo, button and bg registration page

--- a/eCommerce-Application/src/styles/pages/_registration.scss
+++ b/eCommerce-Application/src/styles/pages/_registration.scss
@@ -1,5 +1,6 @@
-body {
+#registration {
     background-image: url('../assets/images/registration-bg.svg');
+    background-size: cover;
     background-position: center;
 }
 
