--- a/eCommerce-Application/src/styles/components/_form.scss
+++ b/eCommerce-Application/src/styles/components/_form.scss
@@ -139,7 +139,8 @@
         }
 
         &_invalid {
-            border: 1px solid var(--color-danger);
+            // border: 1px solid var(--color-danger);
+            outline: 1px solid var(--color-danger);
         }
 
         @include mixins.respond-to('tablet') {
@@ -156,11 +157,18 @@
     &__select {
         width: 100%;
         height: 100%;
-
-        outline: 1px solid var(--color-secondary);
     }
 
     &_big-first-letter {
         text-transform: capitalize;
     }
+}
+
+/*Custom rules for checkbox */
+input[type='checkbox'] {
+    -webkit-appearance: checkbox;
+    -moz-appearance: checkbox;
+    -ms-appearance: checkbox;
+    -o-appearance: checkbox;
+    appearance: checkbox;
 }
