--- a/eCommerce-Application/src/styles/pages/_login.scss
+++ b/eCommerce-Application/src/styles/pages/_login.scss
@@ -66,7 +66,7 @@
     position: relative;
     overflow: hidden;
     width: 100%;
-    height: 5rem;
+    height: 7rem;
     input {
         position: absolute;
         z-index: 2;
@@ -165,6 +165,9 @@
 }
 
 .error-message {
+    position: absolute;
+    top: 50%;
+
     margin-bottom: 4.6rem;
     height: 1rem;
 
