fix: change login password icons, add padding for form

--- a/eCommerce-Application/src/styles/components/_form.scss
+++ b/eCommerce-Application/src/styles/components/_form.scss
@@ -2,6 +2,11 @@
 
 .form {
     margin: 0 auto;
+    padding-bottom: 3rem;
+
+    @include mixins.respond-to('tablet') {
+        padding-bottom: 8rem;
+    }
 
     &__title {
         padding: 2vw;
