--- a/eCommerce-Application/src/styles/layout/_header.scss
+++ b/eCommerce-Application/src/styles/layout/_header.scss
@@ -1,8 +1,12 @@
 @use '../abstracts/mixins';
 
 .header {
-    @include mixins.flex(null, flex-start, center);
+    @include mixins.flex(null, flex-start, flex-end);
 
+    padding: 2rem 2rem 0 2rem;
+}
+
+#registration .header {
     padding: 5vw 3vw;
 
     @include mixins.respond-to('tablet') {
