--- a/eCommerce-Application/src/styles/pages/_login.scss
+++ b/eCommerce-Application/src/styles/pages/_login.scss
@@ -1,6 +1,9 @@
 @use '../abstracts/mixins';
 
 #login {
+    display: grid;
+    row-gap: 1rem;
+
     height: 100dvh;
 
     background-image: url('../assets/images/backround-login.png');
@@ -10,6 +13,10 @@
 
     & .form {
         width: min(100rem, 95%);
+    }
+
+    @include mixins.respond-to('tablet') {
+        row-gap: 4rem;
     }
 }
 
