--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -12,6 +12,8 @@
 
         color: var(--color-white);
 
+        cursor: pointer;
+
         transition: box-shadow 0.3s ease;
 
         &:hover {
@@ -33,6 +35,12 @@
                 right: 0;
 
                 opacity: 1;
+            }
+
+            & span::after {
+                filter: invert(95%) sepia(34%) saturate(4887%)
+                    hue-rotate(145deg) brightness(91%) contrast(96%);
+                left: calc(100% + 1.5rem);
             }
         }
 
@@ -113,6 +121,31 @@
             box-shadow: var(--drop-shadow-light);
         }
     }
+
+    &--exit {
+        span {
+            position: relative;
+
+            &:after {
+                position: absolute;
+                content: '';
+                top: 50%;
+                left: calc(100% + 1.2rem);
+                translate: 0 -50%;
+                width: 2rem;
+                height: 2rem;
+                background-image: url('../assets/images/exit-icon.png');
+                background-repeat: no-repeat;
+                background-size: 2rem 2rem;
+                filter: invert(1) brightness(200%);
+                // filter: invert(1) sepia(100%) saturate(0%) hue-rotate(90deg)
+                //     brightness(200%) contrast(100%);
+                transition:
+                    filter 0.3s linear,
+                    left 0.2s ease-in;
+            }
+        }
+    }
 }
 
 .arrow {
@@ -120,4 +153,12 @@
     padding: 0.8em 1em;
 
     border: 0.1rem solid var(--color-primary);
+
+    img {
+        height: 1.5rem;
+
+        @include mixins.respond-to('tablet') {
+            height: auto;
+        }
+    }
 }
