--- a/eCommerce-Application/src/styles/components/_logo.scss
+++ b/eCommerce-Application/src/styles/components/_logo.scss
@@ -1,4 +1,5 @@
 @use '../abstracts/mixins';
+
 .logo {
     height: var(--fs-logo);
 
@@ -10,10 +11,11 @@
         margin: 0 auto;
     }
 }
+
 .user-info {
     @include mixins.flex(row, space-between, center);
 
-    margin-bottom: 2rem;
+    margin-bottom: 0;
 
     h2 {
         color: var(--color-white);
@@ -21,5 +23,9 @@
 
     img {
         height: clamp(3rem, 3vw, 7rem);
+    }
+
+    @include mixins.respond-to('tablet') {
+        margin-bottom: 2rem;
     }
 }
