fix: remove links margin for mobile devices

--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -150,8 +150,11 @@
     }
 
     & a {
-        margin-inline: -0.5em;
         padding: 0.5em;
+
+        @include mixins.respond-to('tablet') {
+            margin-inline: -0.5em;
+        }
     }
 }
 
