--- a/eCommerce-Application/src/styles/components/_buttons.scss
+++ b/eCommerce-Application/src/styles/components/_buttons.scss
@@ -153,7 +153,7 @@
         padding: 0.5em;
 
         @include mixins.respond-to('tablet') {
-            margin-inline: -0.5em;
+            margin-left: -0.5em;
         }
     }
 }
