feat: add search input

--- a/eCommerce-Application/src/styles/components/_form.scss
+++ b/eCommerce-Application/src/styles/components/_form.scss
@@ -176,6 +176,10 @@
     }
 }
 
+.search-bar {
+    display: inline-block;
+}
+
 /* Custom rules for checkbox */
 input[type='checkbox'] {
     -webkit-appearance: checkbox;
