--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -4,6 +4,7 @@
     //Colors
     --color-primary: hsl(181, 73%, 60%);
     --color-primary-alpha: hsl(181, 73%, 60%, 0.7);
+    --color-primary-opacity: hsl(181, 73%, 60%, 0.15);
     --color-secondary: hsl(252, 12%, 40%);
     --color-secondary-opacity: hsla(253, 12%, 40%, 0.502);
     --color-error: hsl(0, 100%, 61%);
@@ -35,6 +36,8 @@
     --fs-form: clamp(1.2rem, 3vw, 2rem);
     --fs-paragraph: clamp(1.2rem, 2vw, 2.2rem);
     --fs-big: clamp(2rem, 3vw, 4rem);
+    --fs-price: clamp(1.6rem, 1.7vw, 3.5rem);
     --fs-medium: clamp(1.2rem, 1vw, 3rem);
     --fs-small: clamp(1rem, 2vw, 1.6rem);
+    --fs-very-small: clamp(0.5rem, 1vw, 1.2rem);
 }
