feat: add price with discount, styles of cards, filters

--- a/eCommerce-Application/src/styles/abstracts/_variables.scss
+++ b/eCommerce-Application/src/styles/abstracts/_variables.scss
@@ -36,8 +36,8 @@
     --fs-form: clamp(1.2rem, 3vw, 2rem);
     --fs-paragraph: clamp(1.2rem, 2vw, 2.2rem);
     --fs-big: clamp(2rem, 3vw, 4rem);
-    --fs-price: clamp(1.6rem, 1.7vw, 3.5rem);
+    --fs-medium-big: clamp(1.6rem, 1.6vw, 3.5rem);
     --fs-medium: clamp(1.2rem, 1vw, 3rem);
     --fs-small: clamp(1rem, 2vw, 1.6rem);
-    --fs-very-small: clamp(0.5rem, 1vw, 1.2rem);
+    --fs-very-small: clamp(0.5rem, 1vw, 1.3rem);
 }
